# gpt-2

./: .gitignore  download_model.py  pyproject.toml
src/gpt_2/: encoder.py  generate_unconditional_samples.py  interactive_conditional_samples.py  model.py  sample.py
