[project]
name = "gpt-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "NostraDavid", email = "55331731+NostraDavid@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fire==0.7.0",
    "hparams>=0.3.0",
    "regex==2024.11.6",
    "requests==2.32.3",
    "tensorflow>=2.19.0",
    "tqdm==4.67.1",
]

[project.scripts]
gpt-2 = "gpt_2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
